--- a/index.html
+++ b/index.html
@@ -4,17 +4,55 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+			crossorigin="anonymous"
+		/>
 		<title>ui landingPage</title>
 	</head>
 	<body>
-		<nav class="navbar">
+		<nav class="navbar2">
 			<ul>
+				<li>
+					<a href="#">One</a>
+					<ul class="dropdown">
+						<li>
+							<a href="#">Sub-1</a>
+							<p>This is the first content</p>
+						</li>
+						<li></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">Two</a>
+					<ul class="dropdown">
+						<li>
+							<a href="#">Sub-1</a>
+							<p>This is content</p>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+						</li>
+						<li></li>
+					</ul>
+				</li>
+				<li>
+					<a href="#">Three</a>
+					<ul class="dropdown">
+						<li>
+							<a href="#">Sub-2</a>
+							<p>This is more content</p>
+						</li>
+					</ul>
+				</li>
+			</ul>
+			<!---	<ul>
 				<li><a href="#">Domains</a></li>
 				<li><a href="#">Email & Marketing</a></li>
 				<li><a href="#">Hosting</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">Sign In</a></li>
-			</ul>
+			</ul>-->
 		</nav>
 		<!--Showcase-->
 		<div class="container">
@@ -72,5 +110,10 @@
 			</div>
 			<div class="zoom"></div>
 		</section>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
