--- a/index.html
+++ b/index.html
@@ -14,45 +14,47 @@
 	</head>
 	<body>
 		<nav class="navbar2">
-			<ul>
-				<li>
-					<a href="#">One</a>
-					<ul class="dropdown">
-						<li>
-							<a href="#">Sub-1</a>
-							<p>This is the first content</p>
-						</li>
-						<li></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">Two</a>
-					<ul class="dropdown">
-						<li>
-							<a href="#">Sub-1</a>
-							<p>This is content</p>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-						</li>
-						<li></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">Three</a>
-					<ul class="dropdown">
-						<li>
-							<a href="#">Sub-2</a>
-							<p>This is more content</p>
-						</li>
-					</ul>
-				</li>
-			</ul>
-			<!---	<ul>
+			<div class="container flex">
+				<ul>
+					<li>
+						<a href="#">Domains</a>
+						<ul class="dropdown">
+							<li>
+								<a href="#">Sub-1</a>
+								<p>This is the first content</p>
+							</li>
+							
+						</ul>
+					</li>
+					<li>
+						<a href="#">Two</a>
+						<ul class="dropdown">
+							<li>
+								<a href="#">Sub-1</a>
+								<p>This is content</p>
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+							</li>
+							<li></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">Three</a>
+						<ul class="dropdown">
+							<li>
+								<a href="#">Sub-2</a>
+								<p>This is more content</p>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				<!---	<ul>
 				<li><a href="#">Domains</a></li>
 				<li><a href="#">Email & Marketing</a></li>
 				<li><a href="#">Hosting</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">Sign In</a></li>
-			</ul>-->
+            </ul>-->
+			</div>
 		</nav>
 		<!--Showcase-->
 		<div class="container">
