--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="container">
+        <nav class="flex_container">
           <div class="one">
           <a href="#" class="navLinks">Home</a>
           </div>
