different nav hovers

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,11 @@
 </div>
 </div>
 </div>
+<div class="main">
+    <div class="main_text">
+        <h2>Your Domain Today</h2>
+    </div>
+</div>
       <script src="app.js"></script>
 </body>
 </html>
