--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<nav class="navbar2">
-			<div class="container flex">
+			<div class="container">
 				<ul>
 					<li>
 						<a href="#">Domains</a>
@@ -27,7 +27,7 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#">Two</a>
+						<a href="#">Email Marketing</a>
 						<ul class="dropdown">
 							<li>
 								<a href="#">Sub-1</a>
@@ -38,11 +38,14 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#">Three</a>
+						<a href="#">Hosting</a>
 						<ul class="dropdown">
 							<li>
-								<a href="#">Sub-2</a>
-								<p>This is more content</p>
+								<h4>New Customers</h4>
+								<p>Your Plan</p>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+								<button class="button my-1">Sign Up</button>
+							
 							</li>
 						</ul>
 					</li>
