--- a/about.html
+++ b/about.html
@@ -9,15 +9,34 @@
 			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="drop.css" />
 		<title>Document</title>
 	</head>
 	<body>
-	<!---	<ul class="nav nav-pills justify-content-end">
-			<li class="nav-item">
-			  <a class="nav-link" aria-current="page" href="#">Active</a>
+	<!---	<ul class="nav nav-pills justify-content-center">
+			<li class="nav-item dropdown">
+			 <!--- <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown""  href="#" role="button" aria-expanded="false">Products</a>
+			  <ul class="dropdown-menu drop_one">
+				<li><a class="dropdown-item" href="#">Action</a></li>
+				<li><a class="dropdown-item" href="#">Another action</a></li>
+				<li><a class="dropdown-item" href="#">Something else here</a></li>
+				<li><hr class="dropdown-divider"></li>
+				<li><a class="dropdown-item" href="#">Separated link</a></li>
+			  </ul>
+			  <ul class="dropdown-menu drop_two">
+				<li><a class="dropdown-item" href="#">Action</a></li>
+				<li><a class="dropdown-item" href="#">Another action</a></li>
+				<li><a class="dropdown-item" href="#">Something else here</a></li>
+				<li><hr class="dropdown-divider"></li>
+				<li><a class="dropdown-item" href="#">Separated link</a></li>
+			  </ul>
 			</li>
 			<li class="nav-item dropdown">
+			  <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Contact</a>
+			 
+			</li>
+			<li class="nav-item">
+			
 			  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Contact</a>
 			  <ul class="dropdown-menu">
 				<li><a class="dropdown-item" href="#">Action</a></li>
@@ -27,12 +46,9 @@
 				<li><a class="dropdown-item" href="#">Separated link</a></li>
 			  </ul>
 			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="#">Link</a>
-			</li>
 			
 		  </ul>-->
-		<nav class="navbar2">
+	<!---	<nav class="navbar2">
 			<nav role="navigation">
 				<nav role="navigation">
 					<ul>
@@ -68,7 +84,27 @@
 					</ul>
 				</nav>
 			</nav>
-		</nav>
+		</nav> -->
+		<ul>
+			<li>Home</li>
+			<li>About</li>
+			<li>
+			  Portfolio
+			  <ul>
+				<li>Web Design</li>
+				<li>Web Development</li>
+				<li>Illustrations</li>
+			  </ul>
+			</li>
+			<li>Blog</li>
+			<li>Contact
+			  <ul>
+				<li>Web Design</li>
+				<li>Web Development</li>
+				<li>Illustrations</li>
+			  </ul>
+			</li>
+		  </ul>
 		<!--Showcase-->
 		<div class="container">
 			<img src="images/moon.jpg" alt="ice" style="width: 95%" />
