--- a/about.html
+++ b/about.html
@@ -93,10 +93,10 @@
 			</li>
 			<li>Blog</li>
 			<li>Contact
-				<ul>
-					<li>Web Design</li>
-					<li>Web Development</li>
-					<li>
+				<ul >
+					<li class="side_li">Web Design</li>
+					<li class="side_li">Web Development</li>
+					<li class="side_li">
 
 						<button class="btn">Sign Up</button>
 					</li>
